utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_custom_field_with_ref_schema_and_doc_comment.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "properties": {
    "id": {
      "$ref": "#/components/schemas/Other",
      "description": "This is the description of the field."
    }
  },
  "required": [
    "id"
  ],
  "type": "object"
}
