utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_custom_field_with_schema_doc_comment_overrides_description.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "properties": {
    "id": {
      "description": "This is the description of the field.",
      "type": "string"
    }
  },
  "required": [
    "id"
  ],
  "type": "object"
}
